<resources>
    <string name="app_name">DogCareApp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_recovery_password">Quên mật khẩu</string>
    <string name="text_sign_in">Đăng nhập</string>
    <string name="text_done">Xong</string>
    <string name="text_password_title">Mật khẩu</string>
    <string name="text_password_hint">***</string>
    <string name="text_new_user_create_account"><font color="#6A6A6A">Bạn chưa có tài khoản?</font> <font color="#1A1D1E"> Tạo tài khoản</font></string>
    <string name="text_your_name">Tên của bạn</string>
    <string name="text_sign_up">Đăng ký</string>
    <string name="text_already_have_account_log_in"><font color="#1A1D1E">Bạn đã có tài khoản?</font> <font color="#6A6A6A"> Đăng nhập</font></string>
    <string name="text_reset_password">Làm mới mật khẩu</string>

    <string name="days_ago">%d days ago</string>
    <string name="day_ago">%d day ago</string>
    <string name="hours_ago">%d hours ago</string>
    <string name="hour_ago">%d hour ago</string>
    <string name="minutes_ago">%d minutes ago</string>
    <string name="minute_ago">%d minute ago</string>
    <string name="a_moment_ago">a moment ago</string>
    <string name="_please_wait">Xin chờ</string>
    <string name="note_splash">Cùng theo dõi và quản lý thú cưng của bạn nào</string>
    <string name="home">Trang chủ</string>
    <string name="pet">Thú cưng</string>
    <string name="stories">Khoảnh khắc</string>
    <string name="user">Tài khoản</string>
</resources>