<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_of_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="@dimen/button_size_35"
            android:layout_height="@dimen/button_size_35"
            android:layout_marginStart="@dimen/spacing_13"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title1"
            style="@style/TextLayoutBasicStyle"
            android:layout_width="@dimen/_170sdp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="Đăng ký"
            android:textColor="@color/main_color"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ic_control"
            android:layout_width="@dimen/button_size_35"
            android:layout_height="@dimen/button_size_35"
            android:layout_marginEnd="@dimen/spacing_13"
            android:src="@drawable/ic_back"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_end"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/spacing_13"
            android:text="@string/text_done"
            android:visibility="gone"
            android:gravity="center"
            android:textAlignment="center"
            style="@style/TextLayoutHeadingStyle"
            android:textSize="@dimen/spacing_13"
            android:textColor="@color/main_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_of_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/layout_of_header">


            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_title3"
                    android:layout_marginStart="@dimen/spacing_13"
                    android:layout_marginTop="@dimen/spacing_13"
                    android:text="@string/text_your_name"
                    android:textSize="14dp"
                    android:textColor="@color/main_color"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_title3"
                    android:layout_height="wrap_content"
                    android:id="@+id/edt_name"
                    android:layout_marginTop="@dimen/spacing_10"
                    android:inputType="textEmailAddress"
                    android:hint="xxxxxxxxxxx"
                    android:textStyle="bold"
                    android:background="@drawable/background_base_edittext"
                    style="@style/EditTextBaseStyle" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_title"
                    android:layout_marginStart="@dimen/spacing_13"
                    android:layout_marginTop="@dimen/spacing_13"
                    android:textSize="14dp"
                    android:textColor="@color/main_color"
                    android:textStyle="bold"
                    android:text="Email của bạn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_title"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_10"
                    android:hint="xyz@gmail.com"
                    android:textStyle="bold"
                    android:id="@+id/edt_email"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/background_base_edittext"
                    style="@style/EditTextBaseStyle"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_title2"
                    android:layout_marginStart="@dimen/spacing_13"
                    android:layout_marginTop="@dimen/spacing_13"
                    android:textSize="14dp"
                    android:textColor="@color/main_color"
                    android:textStyle="bold"
                    android:text="@string/text_password_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title2"
                    app:passwordToggleEnabled="true"
                    app:boxBackgroundMode="none"
                    app:hintEnabled="false"
                    android:layout_marginTop="@dimen/spacing_10">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/EditTextBaseStyle"
                        android:background="@drawable/background_base_edittext"
                        android:hint="@string/text_password_hint"
                        android:textStyle="bold"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_login"
                style="@style/ButtonStyleMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_10"
                android:paddingStart="@dimen/spacing_10"
                android:paddingTop="@dimen/spacing_10"
                android:paddingEnd="@dimen/spacing_10"
                android:paddingBottom="@dimen/spacing_15"
                android:text="@string/text_sign_up" />

            <TextView
                android:id="@+id/tv_go_back_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_13"
                android:layout_marginBottom="@dimen/spacing_20"
                android:layout_marginTop="@dimen/spacing_50"
                android:layout_marginEnd="@dimen/spacing_13"
                android:text="@string/text_already_have_account_log_in"
                android:textSize="14dp"
                android:textAlignment="center" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>